examples/test/testpolicy8306.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8306
  namespace: namespace162
spec:
  podSelector:
    matchLabels:
      key44: value31
      key22: value35
      key38: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value48
          key10: value34
          key30: value31
